Remove large files from git tracking and update .gitignore
- Remove model checkpoints (epoch_1.pt - 161MB) from git
- Remove test data files (*.jsonl, corpus.txt) from git
- Update .gitignore to exclude:
  - Model checkpoints (*.pt, *.pth, checkpoints/)
  - Training data (data/, *.jsonl)
  - Virtual environments (llm/, venv/)
  - Python cache and logs
  - Tokenizer models (*.model, *.vocab)

Files remain on disk but are no longer tracked by git.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,65 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+*.egg
+
+# Virtual Environments
+llm/
+venv/
+env/
+ENV/
+.venv
+
+# Model Checkpoints & Weights (LARGE FILES - DO NOT COMMIT)
+checkpoints/
+*.pt
+*.pth
+*.ckpt
+*.safetensors
+*.bin
+*.onnx
+*.pb
+
+# Tokenizer Models (can be large)
+*.model
+*.vocab
+tokenizer/*.model
+tokenizer/*.vocab
+
+# Training Data (LARGE FILES - DO NOT COMMIT)
+data/
+!data/.gitkeep
+*.jsonl
+*.json.gz
+*.csv
+*.tsv
+*.parquet
+
+# Logs and Outputs
+logs/
+*.log
+wandb/
+tensorboard/
+runs/
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+*.ipynb
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
 # Environment variables
 .env
 .env.*
@@ -50,3 +112,12 @@ id_ed25519
 **/credentials/
 **/*secret*
 **/*credential*
+
+# Compiled Go binaries
+cmd/fetchdata/fetchdata
+cmd/fetchdata/main
+*.exe
+
+# Test artifacts
+coverage.out
+*.test
